--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,11 @@
     "version": 2,
     "name": "native-server",
     "builds": [{ "src": "index.js", "use": "@vercel/node" }],
-    "routes": [{ "src": "/(.*)", "dest": "/server.js" }]
+    "routes": [{ "src": "/(.*)", "dest": "/index.js" }],
+    "dependencies": {
+      "cors": "^2.8.5",
+      "express": "^4.17.1",
+      "socket.io": "^4.3.2"
+    },
+    "devDependencies": {}
   }
